# advent-of-code-2024

./: README.md  pyproject.toml
.github/workflows/: run_test.yml
day_01/: part1.py  part2.py
day_02/: part1.py  part2.py
day_03/: part1.py  part2.py
day_04/: part1.py  part2.py
day_05/: part1.py  part2.py
