[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Solutions to Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]
extend-ignore = ["E741"]
